updated the patient queue to include links for search and add right in the header.

--- a/templates/patient_queue.html
+++ b/templates/patient_queue.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block extraheader %}
-	Patient Queue|<A HREF=/lab_queue/>Lab Queue</A>|<A HREF=/med_queue/>Med Queue</A>
+	Patient Queue(<A HREF=/patient/search/>search</a>,<a href=/patient/new>add</a>)|<A HREF=/lab_queue/>Lab Queue</A>|<A HREF=/med_queue/>Med Queue</A>
 {% endblock %}
 
 {% block content %}
