--- a/templates/patient.html
+++ b/templates/patient.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Patient: {{p}} ({{p.id}}){% endblock %}
+{% block extraheader %}
+        <A HREF=/patient_queue/>Patient Queue</A>(<A HREF=/patient/search/>search</a>,<a href=/patient/new>add</a>)|<A HREF=/lab_queue/>Lab Queue</A>|<A HREF=/med_queue/>Med Queue</A>
+{% endblock %}
 {% block content %}
 <H1>Patient Info: {{p.fullName}} ({{p.id}})</H1>
 <TABLE>
