--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <BODY>
 <div id="container">
   <DIV ID="titlebar">
-    <DIV ID="titlebarLeft"><A HREF=/>OCEMR</A> {% get_version_tag %}</DIV>
+    <DIV ID="titlebarLeft"><A HREF=/patient_queue/>OCEMR</A> {% get_version_tag %}</DIV>
     <DIV ID="titlebarRight"><A HREF=/accounts/logout/>Logout</A></DIV>
   </DIV> <!-- titlebar -->
   <DIV ID="header">
