made title text smaller in popup windows

--- a/templates/popup_form.html
+++ b/templates/popup_form.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<H1>{{title}}</H1>
+<SPAN>{{title}}</SPAN>
 <form action="{{ form_action }}" method="POST">
 <TABLE>
 {{ form.as_table }}
