--- a/templates/visit_plan.html
+++ b/templates/visit_plan.html
@@ -38,7 +38,7 @@
   <BR>
   (<A HREF="#" onClick='window.open("/diag/{{d.id}}/edit/notes/","Edit Diagnosis Notes","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>edit notes</A> | <A HREF="#" onClick='window.open("/diag/{{d.id}}/history/","View Diagnosis History","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>view history</A>)
   <BR>
-  <SPAN ID=diagnosisByline>by {{d.diagnosedBy}} on {{d.diagnosedDateTime|date:"m-d-Y H:i"}}</SPAN>
+  <SPAN ID=diagnosisByline>by {{d.diagnosedBy}} on {{d.diagnosedDateTime|date:"d-m H:i"}}</SPAN>
   </DIV> <!-- ID=diagnosisActive -->
 
 {% endfor %}
