move cancel to the other side of the popup window...

--- a/templates/popup_form.html
+++ b/templates/popup_form.html
@@ -12,5 +12,7 @@
 </TABLE>
 <input type="submit" value="Submit" />
 </form>
+<DIV ALIGN=RIGHT>
 <a href="#" onClick='opener.window.location.reload();self.close();return false;'>Cancel</a>
+</DIV>
 {% endblock %}
