added a "delete" diagnosis

--- a/templates/visit_plan.html
+++ b/templates/visit_plan.html
@@ -33,6 +33,7 @@
     |<A HREF="#" onClick='window.open("/diag/{{d.id}}/stat_change/NOT/","","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Not Addressing</A>
     |Resolve
   {% endifequal %}
+  |<A HREF="#" onClick='window.open("/diag/{{d.id}}/delete/","","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Delete</A>
   |)</SPAN><BR>
   <TEXTAREA COLS=100% DISABLED>{{d.notes}}</TEXTAREA>
   <BR>
