models:         added followupTo link back to Visit         fixed DateTime stamps and added for finished added a 'view record' and fixed print record for MedQueue claim, finish and resolv now tag the Visit with user and timestamp.

--- a/templates/popup_info.html
+++ b/templates/popup_info.html
@@ -1,7 +1,9 @@
 {% extends "base_popup.html" %}
 
 {% block content %}
+<PRE>
 {{ info }}
+</PRE>
 <a href="#" onClick='opener.window.location.reload();self.close();return false;'>Close</a>
 
 {% endblock %}
