--- a/templates/med_queue.html
+++ b/templates/med_queue.html
@@ -74,7 +74,8 @@
 			{% endifequal %}
 			{% ifequal v.status "RESO" %}
 		<A HREF=# onClick='window.open("/visit/{{v.id}}/unresolve/","Undo Resolve","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Undo Resolve</A>
-		<A HREF=# onClick='window.open("/visit/{{v.id}}/print/","Print","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Print</A>
+		<A HREF=# onClick='window.open("/visit/{{v.id}}/record/print/","Print","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Print Record</A>
+		<A HREF=# onClick='window.open("/visit/{{v.id}}/record/view/","Print","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>View Record</A>
 			{% endifequal %}
 		{% endifequal %}
 </TD>
