--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 <div id="container">
   <DIV ID="titlebar">
     <DIV ID="titlebarLeft"><A HREF=/patient_queue/>OCEMR</A> {% get_version_tag %}</DIV>
-    <DIV ID="titlebarRight"><A HREF=/accounts/logout/>Logout</A></DIV>
+    <DIV ID="titlebarRight">{% if user.is_authenticated %}{{ user.username }} - <A HREF=/accounts/logout/>Logout</A>{% endif %}</DIV>
   </DIV> <!-- titlebar -->
   <DIV ID="header">
     <DIV ID="headerLeft">{% now "F j Y" %}</DIV>
