remove the auto refreshing queue pages

--- a/templates/med_queue.html
+++ b/templates/med_queue.html
@@ -3,9 +3,11 @@
 {% block title %}Active Med Queue{% endblock %}
 
 {% block extrahead %}
+{% comment %}
   <META HTTP-EQUIV="Cache-Control" content="no-cache">
   <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
   <META HTTP-EQUIV="Refresh" CONTENT="30"> 
+{% endcomment %}
 {% endblock %}  
 
 {% block extraheader %}
