updated templates to include a 'reports' link to reports page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 <LI><A HREF=/patient_queue/>Patient Queue</A>
 <LI><A HREF=/lab_queue/>Lab Queue</A>
 <LI><A HREF=/med_queue/>Prescription Queue</A>
+<LI><A HREF=/reports/>System Reports</A>
 </UL>
 <UL>Patients:
   <LI><A HREF=/patient/search/>Find a Patient</A>
