--- a/templates/med_queue.html
+++ b/templates/med_queue.html
@@ -11,7 +11,7 @@
 {% endblock %}  
 
 {% block extraheader %}
-	<A HREF=/patient_queue/>Patient Queue</A>|<A HREF=/lab_queue/>Lab Queue</A>|Med Queue
+	<A HREF=/patient_queue/>Patient Queue</A>|<A HREF=/lab_queue/>Lab Queue</A>|Med Queue|<A HREF=/reports/>Reports</A>
 {% endblock %}
 
 {% block content %}
