--- a/templates/patient_list.html
+++ b/templates/patient_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Patient Search Results{% endblock %}
 {% block extraheader %}
-        <A HREF=/patient_queue/>Patient Queue</A>(<A HREF=/patient/search/>search</a>,<a href=/patient/new>add</a>)|<A HREF=/lab_queue/>Lab Queue</A>|<A HREF=/med_queue/>Med Queue</A>
+        <A HREF=/patient_queue/>Patient Queue</A>(<A HREF=/patient/search/>search</a>,<a href=/patient/new>add</a>)|<A HREF=/lab_queue/>Lab Queue</A>|<A HREF=/med_queue/>Med Queue</A>|<A HREF=/reports/>Reports</A>
 {%endblock%}
 {% block content %}
 {% if patients %}
