--- a/templates/patient_queue.html
+++ b/templates/patient_queue.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block extraheader %}
-	Patient Queue(<A HREF=/patient/search/>search</a>,<a href=/patient/new>add</a>)|<A HREF=/lab_queue/>Lab Queue</A>|<A HREF=/med_queue/>Med Queue</A>
+	Patient Queue(<A HREF=/patient/search/>search</a>,<a href=/patient/new>add</a>)|<A HREF=/lab_queue/>Lab Queue</A>|<A HREF=/med_queue/>Med Queue</A>|<A HREF=/reports/>Reports</A>
 {% endblock %}
 
 {% block content %}
