--- a/templates/patient_search.html
+++ b/templates/patient_search.html
@@ -2,7 +2,7 @@
 {% block title %}Patient Search{% endblock %}
 {% block extrahead %} {{ form.media }} {%endblock%}
 {% block extraheader %}
-        <A HREF=/patient_queue/>Patient Queue</A>(search,<a href=/patient/new>add</a>)|<A HREF=/lab_queue/>Lab Queue</A>|<A HREF=/med_queue/>Med Queue</A>
+        <A HREF=/patient_queue/>Patient Queue</A>(search,<a href=/patient/new>add</a>)|<A HREF=/lab_queue/>Lab Queue</A>|<A HREF=/med_queue/>Med Queue</A>|<A HREF=/reports/>Reports</A>
 {%endblock%}
 {% block content %}
 <form action="/patient/search/" method="POST">
