--- a/templates/lab_queue.html
+++ b/templates/lab_queue.html
@@ -11,7 +11,7 @@
 {% endblock %}  
 
 {% block extraheader %}
-  <A HREF=/patient_queue/>Patient Queue</A>|Lab Queue|<A HREF=/med_queue/>Med Queue</A>
+  <A HREF=/patient_queue/>Patient Queue</A>|Lab Queue|<A HREF=/med_queue/>Med Queue</A>|<A HREF=/reports/>Reports</A>
 {% endblock %}
 
 {% block content %}
