commented out unwritten report

--- a/templates/reports.html
+++ b/templates/reports.html
@@ -8,7 +8,9 @@
 {% block content %}
 <UL>
 <LI><A HREF="#" onClick='window.open("/reports/legacy/patient/daily","Get Legacy Daily Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Legacy Daily Patient Report</A>
+{% comment %}
 <LI><A HREF="#" onClick='window.open("/reports/legacy/monthly/","Get Legacy Daily Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Legacy Monthly Patient Report</A>
+{% endcomment %}
 </UL>
 
 {% endblock %}
