--- a/templates/patient_queue.html
+++ b/templates/patient_queue.html
@@ -90,11 +90,11 @@
 	{% endifequal %}
 {{v.displayStatus}} </TD>
 <TD>
-{%if v.is_claimed %}
+{%ifequal v.status "CHOT" %}
 	<A HREF=# onClick='window.open("/visit/{{v.id}}/unfinish/","Unfinish Visit","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Undo-Finish</A>
 {% else %}
 	<A HREF=# onClick='window.open("/visit/{{v.id}}/unfinish/","Unfinish Visit","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Undo-Miss</A>
-{% endif %}
+{% endifequal %}
 	
 </TR>
 {% endfor %}
