--- a/templates/med_queue.html
+++ b/templates/med_queue.html
@@ -72,6 +72,9 @@
 </TD>
 <TD>
 		<A HREF="/meds/{{v.id}}/">View</A>
+		{% ifequal v.get_num_meds 1 %}
+		| <A HREF=# onClick='window.open("/visit/{{v.id}}/resolve/","Resolve","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Resolve</A>
+		{% endifequal %}
 		{% ifequal v.get_med_status 2 %}
 		| <A HREF=# onClick='window.open("/visit/{{v.id}}/resolve/","Resolve","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Resolve</A>
 		{% endifequal %}
